change some of code

--- a/accounts/templates/accounts/change-password.html
+++ b/accounts/templates/accounts/change-password.html
@@ -10,9 +10,9 @@
 		<div class="post p-5 lg:p-1 rounded-md">
 			<div class="profile-function" style="margin-top: 30px;">
                 <ul>
-                    <li><a href="{% url 'profile' %}">My Recipe</a></li>
-                    <li><a href="{% url 'update_profile' %}">Edit Profile</a></li>
-                    <li  class="active"><a href="{% url 'change_password' %}">Change Password</a></li>
+                    <li><a href="{% url 'profile' %}">Edit Profile</a></li>
+                    <li><a href="{% url 'my_recipe' %}">My Recipe</a></li>
+                    <li class="active"><a href="{% url 'change_password' %}">Change Password</a></li>
                 </ul>
 			</div>
 		</div>
