--- a/accounts/templates/accounts/profile.html
+++ b/accounts/templates/accounts/profile.html
@@ -2,107 +2,89 @@
 {% load humanize %}
 {% load static %}
 {% block body %}
-<div style="margin-top: 65px;" class="bg-white container">
+<div style="margin-top: 60px;" class="bg-white container">
 	<div class="grid grid-cols-1 gap-4 lg:grid-cols-3 md:grid-cols-2 lg:gap-8">
 		<div class="post p-5 lg:p-1 rounded-md">
-			<div class="profile-function" style="margin-top: 30px;">
+			<div class="profile-function" style="margin-top: 38px;">
                 <ul>
-                    <li class="active"><a href="{% url 'profile' %}">My Recipe</a></li>
-                    <li><a href="{% url 'update_profile' %}">Edit Profile</a></li>
+                    <li class="active"><a href="{% url 'profile' %}">Edit Profile</a></li>
+                    <li><a href="{% url 'my_recipe' %}">My Recipe</a></li>
                     <li><a href="{% url 'change_password' %}">Change Password</a></li>
                 </ul>
 			</div>
 		</div>
 		<div class="lg:col-span-2 p-4 bg-white mt-3" id="posted">
-            <h2>My Generated Recipe </h2><br>
-			<div class="grid grid-cols-1 lg:grid-cols-2 gap-4">
-                {% if recipes %}
-                  {% for recipe in recipes %}
-                  {% if forloop.counter0|divisibleby:2 %}
-                        <!-- First Column -->
-                        <div class="bg-white p-8 rounded-lg shadow-md max-w-md">
-                            <!-- User Info with Three-Dot Menu -->
-                            <div class="flex items-center justify-between mb-4">
-                                <div class="flex items-center space-x-2">
-                                    <img src="{{recipe.user.profile_photo.url}}" alt="User Avatar" class="w-8 h-8 rounded-full">
-                                    <div>
-                                        <p class="text-gray-800 font-semibold"><a href="{% url 'views_profile' recipe.user.id %}">{{recipe.user.full_name}}</a></p>
-                                        <p class="text-gray-500 text-sm">{{recipe.create_at|naturaltime}}</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Message -->
-                            <div class="mb-4">
-                                <p class="text-gray-800"><a href="{% url 'recipe_details' recipe.id recipe.slug %}">{{recipe.recipe_name}}</a></p>
-                                <p class="text-blue-600">{{recipe.category.category_name}}</p>
-                            </div>
-                            <!-- Image -->
-                            <div class="mb-4">
-                                <img src="{{recipe.image.url}}" alt="Post Image" class="w-full h-48 object-cover rounded-md">
-                            </div>
-                            <!-- Like and Comment Section -->
-                            <div class="flex items-center justify-between text-gray-500">
-                                <div class="flex items-center space-x-2">
-                                    <!-- views -->
-                                    <div class="flex items-center justify-between text-gray-500">
-                                        <div class="flex items-center space-x-2">
-                                        <i class="fa fa-eye"></i><span>{{recipe.views}} Views</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+            <div class="profile-info">
+                <form method="post" class="" enctype="multipart/form-data">
+                    {% csrf_token %}
+                    <div class="flex flex-wrap">
+                        <div style="float: left;" class="md:w-1/6  group p-3">
+                            <a href="#">
+                                <img src="{{form.profile_photo.value.url}}" alt="" />
+                            </a>
                         </div>
-                    {% else %}
-                        <!-- Second Column -->
-                        <div class="bg-white p-8 shadow-md rounded-lg">
-                            <!-- User Info with Three-Dot Menu -->
-                            <div class="flex items-center justify-between mb-4">
-                                <div class="flex items-center space-x-2">
-                                    <img src="{{recipe.user.profile_photo.url}}" alt="User Avatar" class="w-8 h-8 rounded-full">
-                                    <div>
-                                        <p class="text-gray-800 font-semibold"><a href="{% url 'views_profile' recipe.user.id %}">{{recipe.user.full_name}}</a></p>
-                                        <p class="text-gray-500 text-sm">{{recipe.create_at|naturaltime}}</p>
-                                    </div>
-                                </div>
-                            </div>
-                            <!-- Message -->
-                            <div class="mb-4">
-                                <p class="text-gray-800"><a href="{% url 'recipe_details' recipe.id recipe.slug %}">{{recipe.recipe_name}}</a></p>
-                                <p class="text-blue-600">{{recipe.category.category_name}}</p>
-                            </div>
-                            <!-- Image -->
-                            <div class="mb-4">
-                                <img src="{{recipe.image.url}}" alt="Post Image" class="w-full h-48 object-cover rounded-md">
-                            </div>
-                            <!-- Like and Comment Section -->
-                            <div class="flex items-center justify-between text-gray-500">
-                                <div class="flex items-center space-x-2">
-                                    <!-- views -->
-                                    <div class="flex items-center justify-between text-gray-500">
-                                        <div class="flex items-center space-x-2">
-                                        <i class="fa fa-eye"></i><span>{{recipe.views}} Views</span>
-                                        </div>
-                                    </div>
-                                </div>
-                            </div>
+                        <div style="float: right;" class="right md:w-5/6 group">
+                            <h5 style="margin-bottom: 0px !important" class="mb-2 text-2xl font-bold tracking-tight text-gray-900 dark:text-white">{{form.full_name.value}}</h5>
+                            <p>{{form.bio.value}}</p>
+                            <label class="block mb-2 text-sm font-medium text-gray-900 dark:text-white" for="multiple_files">Change Profile Image</label>
+                            <input name="profile_photo" class="block text-sm text-gray-900 border border-gray-300 rounded-lg cursor-pointer bg-gray-50 dark:text-gray-400 focus:outline-none dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400" id="multiple_files" type="file">
                         </div>
-                    {% endif %}
-                  {% endfor %}
-                {% endif %}
-			</div>
-            {% if recipes.has_next %}
-            <nav style="margin-top: 25px;" class="load-more" aria-label="Page navigation example">
-                <a href="?page={{recipes.next_page_number}}" class="flex items-center justify-center px-4 h-10 ms-0 leading-tight text-gray-500 bg-white border border-e-0 border-gray-300 rounded-s-lg hover:bg-gray-100 hover:text-gray-700 dark:bg-gray-800 dark:border-gray-700 dark:text-gray-400 dark:hover:bg-gray-700 dark:hover:text-white">Load More</a>
 
-            </nav>
-        {% endif %}
+                    </div>
+                    <div class="grid md:grid-cols-2 md:gap-6">
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="full_name">{{form.full_name.label}}</label>
+                            <input type="name" name= "{{form.full_name.name}}" id="Full_name" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{form.full_name.value}}" placeholder="Full Name..." required>
+                        </div>
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="bio">{{form.bio.label}}</label>
+                            <input type="text" name="{{form.bio.name}}" id="bio" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{form.bio.value}}" placeholder="Your Bio..." required>
+                        </div>
+                    </div>
+                    <div class="grid md:grid-cols-2 md:gap-6">
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="country">{{form.country.label}}</label>
+                            <input type="text" name="{{form.country.name}}" id="country" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{form.country.value}}" placeholder="Your Country...">
+                        </div>
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="city">{{form.city.label}}</label>
+                            <input type="text" name="{{form.city.name}}" id="city" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{form.city.value}}" placeholder="Your City...">
+                        </div>
+                    </div>
+                    <div class="grid md:grid-cols-2 md:gap-6">
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="address">{{form.address.label}}</label>
+                            <input type="text" name="{{form.address.name}}" id="address" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{form.address.value}}" placeholder="Your Address...">
+                        </div>
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="date">{{form.date_of_birth.label}}</label>
+                            <input type="date" name="{{form.date_of_birth.name}}" id="date" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{ form.date_of_birth.value|date:'Y-m-d' }}" >
+                        </div>
+                    </div>
+                    <div class="grid md:grid-cols-2 md:gap-6">
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="phone_number">{{form.phone_number.label}}</label>
+                            <input type="number" name="{{form.phone_number.name}}" id="phone_number" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{form.phone_number.value}}" placeholder="Your Phone Number...">
+                        </div>
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="twitter">{{form.twitter.label}}</label>
+                            <input type="text" name="{{form.twitter.name}}" id="twitter" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{form.twitter.value}}" placeholder="Your Twitter profile...">
+                        </div>
+                    </div>
+                    <div class="grid md:grid-cols-2 md:gap-6">
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="linkedin">{{form.linkedin.label}}</label>
+                            <input type="text" name="{{form.linkedin.name}}" id="linkedin" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{form.linkedin.value}}" placeholder="Your LinkedIn Profile...">
+                        </div>
+                        <div class="relative z-0 w-full mb-5 group">
+                            <label for="github">{{form.github.label}}</label>
+                            <input type="text" name="{{form.github.name}}" id="github" class="text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:placeholder-gray-400 dark:text-white" value="{{form.github.value}}" placeholder="Your Github profile...">
+                        </div>
+                    </div>
+                    <button type="submit" class="text-white bg-blue-700 hover:bg-blue-800 focus:ring-4 focus:outline-none focus:ring-blue-300 font-medium rounded-lg text-sm w-full sm:w-auto px-5 py-2.5 text-center dark:bg-blue-600 dark:hover:bg-blue-700 dark:focus:ring-blue-800">Submit</button>
+                </form>
+           </div>
 		</div>
 	</div>
 </div>
-<script>
-    function toggleCategories() {
-      const categoryList = document.getElementById("category_items");
-      categoryList.classList.toggle("hidden");
-    }
-  </script>
 {% endblock body %}
