--- a/templates/base.html
+++ b/templates/base.html
@@ -19,7 +19,7 @@
         <meta name="twitter:card" content="summary_large_image" /> <!-- to have large image post format in Twitter -->
 
         <!-- Webpage Title -->
-        <title>Recipe Ai</title>
+        <title>IngredientAI: Your recipe inspiration hub!</title>
 
         <!-- Styles -->
         <link rel="preconnect" href="https://fonts.gstatic.com" />
