--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -734,6 +734,45 @@ input[type="checkbox"] {
     margin-left: 10px;
 }
 
+
+.uploadOuter {
+    text-align: center;
+    padding: 20px;
+    strong {
+      padding: 0 10px
+    }
+  }
+  .dragBox {
+    width: 80%;
+    padding: 70px;
+    height: fit-content;
+    margin: 0 auto;
+    position: relative;
+    text-align: center;
+    font-weight: bold;
+    color: #999;
+    border: 2px dashed #ccc;
+    display: inline-block;
+    transition: transform 0.3s;
+    input[type="file"] {
+      position: absolute;
+      height: 100%;
+      width: 100%;
+      opacity: 0;
+      top: 0;
+      left: 0;
+    }
+  }
+  .draging {
+    transform: scale(1.1);
+  }
+  #preview {
+    text-align: center;
+    img {
+      max-width: 15%;
+      margin: auto;
+    }
+  }
 @keyframes fadeDropdown {
     0% {
         opacity: 0;
