--- a/generate/templates/generate/generate.html
+++ b/generate/templates/generate/generate.html
@@ -60,9 +60,9 @@
                     <p class="text-sm font-semibold mb-2 text-gray-500 dark:text-gray-400">Click to upload or drag and drop</p>
                     <p class="text-xs text-gray-500 dark:text-gray-400">SVG, PNG, JPG or GIF (MAX. 800x400px)</p>
                     <input name="image" type="file" id="uploadFile" onchange="dragNdrop(event)" ondragover="drag()" ondrop="drop()"/>
+                    <label for="image" id="image-label">No file selected</label>
                 </div>
             </div>
-            <div id="preview"></div>
             {% if messages %}
                 {% for message in messages %}
                 <div class="max-w-screen-md mx-auto p-4 mt-10 mb-4 text-sm text-red-800 rounded-lg bg-red-50 dark:bg-gray-800 dark:text-red-400" role="alert">
@@ -154,12 +154,14 @@
 <script>
    "use strict";
 function dragNdrop(event) {
-    var fileName = URL.createObjectURL(event.target.files[0]);
-    var preview = document.getElementById("preview");
-    var previewImg = document.createElement("img");
-    previewImg.setAttribute("src", fileName);
-    preview.innerHTML = "";
-    preview.appendChild(previewImg);
+    var fileName = event.target.files[0]
+    var preview = document.getElementById("image-label");
+
+    if (fileName.name.length > 0) {
+        preview.textContent = 'Selected: '+fileName.name;
+    } else {
+        preview.textContent = 'No file selected';
+    }
 }
 function drag() {
     document.getElementById('uploadFile').parentNode.className = 'draging dragBox';
